améliorations overlay menu

--- a/index.html
+++ b/index.html
@@ -62,75 +62,93 @@
                 <div class="overlay">
                 </div>
                 <div class="not-overlay"></div>
-                    <ul id="souscat1">
-                        <li><a  href="#">Les Arcs Film Festival</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Newsletter</a></li>
-                        <li><a href="#">Cinéma Green Lab</a></li>
-                        <li><a href="#">Slope Of Fame</a></li>
-                        <li><a href="#">@lesarcsfilmfest</a></li>
-                    </ul>
-                    <ul id="souscat2">
-                        <li><a  href="#">Appel à films 2022</a></li>
-                        <li><a href="#">Palmarès 2021</a></li>
-                        <li><a href="#">Invités d'honneur 2021</a></li>
-                        <li><a href="#">Catalogue 2021</a></li>
-                        <li><a href="#">Programmation</a></li>
-                        <li><a href="#">Le Lab Femmes de Cinéma</a></li>
-                        <li><a href="#">Les scolaires au festival</a></li>
-                        <li><a href="#">Comité de sélection</a></li>
-                        <li><a href="#">Statistiques</a></li>
-                        <li><a href="#">Archives</a></li>
-                    </ul>
-                    <ul id="souscat3">
-                        <li><a  href="#">LOGIN</a></li>
-                        <li><a href="#">Covid-19</a></li>
-                        <li><a href="#">Industry Village</a>
-                            <li class="souspage"><a href="#">Village des Coproductions</a></li>
-                            <li class="souspage"><a href="#">Work in Progress</a></li>
-                            <li class="souspage"><a href="#">Music Village</a></li>
-                            <li class="souspage"><a href="#">Talent Village</a></li>
-                            <li class="souspage"><a href="#">Les principaux Flocons des Arcs</a></li>
-                            <li class="souspage"><a href="#">Industry Village Awards 2021</a></li>
-                        </li>
-                        <li><a href="#">Le Sommet Distributeurs/Exploitants</a>
-                            <li class="souspage"><a href="#">Le programme du Sommet des Arcs 2021</a></li>
-                            <li class="souspage"><a href="#">Hors Piste Cinéma</a></li>
-                        </li>
-                    </ul>
-                    <ul id="souscat4">
-                        <li><a  href="#">Édito</a></li>
-                        <li><a href="#">L’Équipe du festival</a></li>
-                        <li><a href="#">Partenaires</a>
-                            <li class="souspage"><a href="#">La Flèche de Cristal</a></li>
-                        </li>
-                        <li><a href="#">Mécènes</a></li>
-                        <li><a href="#">Le Club</a></li>
-                        <li><a href="#">Notre politique de confidentialité (RGPD)</a></li>
-                    </ul>
-                    <ul id="souscat5">
-                        <li><a href="#">Covid 19</a></li>
-                        <li><a href="#">Votre séjour aux Arcs</a>
-                            <li class="souspage"><a href="#">Hébergement</a></li>
-                            <li class="souspage"><a href="#">Le Ski</a></li>
-                            <li class="souspage"><a href="#">Se restaurer</a></li>
-                            <li class="souspage"><a href="#">Les Commerces</a></li>
-                        </li>
-                        <li><a href="#">Se rendre au festival</a></li>
-                        <li><a href="#">Les Lieux du festival</a></li>
-                        <li><a href="#">Le Guide de survie du festival</a></li>
-                        <li><a href="#">Venir avec vos enfants</a></li>
-                        <li><a href="#">Accessibilité pour tous</a></li>
-                    </ul>
-                    <ul id="souscat6">
-                        <li><a  href="#">Communiqués et dossiers de presse</a></li>
-                        <li><a href="#">Accréditation Presse</a></li>
-                        <li><a href="#">Espace téléchargement</a></li>
-                        <li><a href="#">Photothèque</a></li>
-                        <li><a href="#">Revue de presse sélective</a></li>
-                    </ul>
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col-6">
+                        <ul id="souscat1">
+                            <li><a class="liensouscat" href="#">Les Arcs Film Festival</a></li>
+                            <li><a class="liensouscat" href="#">Blog</a></li>
+                            <li><a class="liensouscat" href="#">Newsletter</a></li>
+                            <li><a class="liensouscat" href="#">Cinéma Green Lab</a></li>
+                            <li><a class="liensouscat" href="#">Slope Of Fame</a></li>
+                            <li><a class="liensouscat" href="#">@lesarcsfilmfest</a></li>
+                        </ul>
+                        <ul id="souscat2">
+                            <li><a class="liensouscat" href="#">Appel à films 2022</a></li>
+                            <li><a class="liensouscat" href="#">Palmarès 2021</a></li>
+                            <li><a class="liensouscat" href="#">Invités d'honneur 2021</a></li>
+                            <li><a class="liensouscat" href="#">Catalogue 2021</a></li>
+                            <li><a class="liensouscat" href="#">Programmation</a></li>
+                            <li><a class="liensouscat" href="#">Le Lab Femmes de Cinéma</a></li>
+                            <li><a class="liensouscat" href="#">Les scolaires au festival</a></li>
+                            <li><a class="liensouscat" href="#">Comité de sélection</a></li>
+                            <li><a class="liensouscat" href="#">Statistiques</a></li>
+                            <li><a class="liensouscat" href="#">Archives</a></li>
+                        </ul>
+                        <ul id="souscat3">
+                            <li><a class="liensouscat" href="#">LOGIN</a></li>
+                            <li><a class="liensouscat" href="#">Covid-19</a></li>
+                            <li><a class="liensouscat" href="#">Industry Village</a>
+                                <ul class="sousliste">
+                                    <li><a href="#">Village des Coproductions</a></li>
+                                    <li><a href="#">Work in Progress</a></li>
+                                    <li><a href="#">Music Village</a></li>
+                                    <li><a href="#">Talent Village</a></li>
+                                    <li><a href="#">Les principaux Flocons des Arcs</a></li>
+                                    <li><a href="#">Industry Village Awards 2021</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="liensouscat" href="#">Le Sommet Distributeurs/Exploitants</a>
+                                <ul class="sousliste">
+                                    <li><a href="#">Le programme du Sommet des Arcs 2021</a></li>
+                                    <li><a href="#">Hors Piste Cinéma</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <ul id="souscat4">
+                            <li><a class="liensouscat" href="#">Édito</a></li>
+                            <li><a class="liensouscat" href="#">L’Équipe du festival</a></li>
+                            <li><a class="liensouscat" href="#">Partenaires</a>
+                                <ul class="sousliste">
+                                    <li><a href="#">La Flèche de Cristal</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="liensouscat" href="#">Mécènes</a></li>
+                            <li><a class="liensouscat" href="#">Le Club</a></li>
+                            <li><a class="liensouscat" href="#">Notre politique de confidentialité (RGPD)</a></li>
+                        </ul>
+                        <ul id="souscat5">
+                            <li><a class="liensouscat" href="#">Covid 19</a></li>
+                            <li><a class="liensouscat" href="#">Votre séjour aux Arcs</a>
+                                <ul class="sousliste">
+                                    <li><a href="#">Hébergement</a></li>
+                                    <li><a href="#">Le Ski</a></li>
+                                    <li><a href="#">Se restaurer</a></li>
+                                    <li><a href="#">Les Commerces</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="liensouscat" href="#">Se rendre au festival</a></li>
+                            <li><a class="liensouscat" href="#">Les Lieux du festival</a></li>
+                            <li><a class="liensouscat" href="#">Le Guide de survie du festival</a></li>
+                            <li><a class="liensouscat" href="#">Venir avec vos enfants</a></li>
+                            <li><a class="liensouscat" href="#">Accessibilité pour tous</a></li>
+                        </ul>
+                        <ul id="souscat6">
+                            <li><a class="liensouscat" href="#">Communiqués et dossiers de presse</a></li>
+                            <li><a class="liensouscat" href="#">Accréditation Presse</a></li>
+                            <li><a class="liensouscat" href="#">Espace téléchargement</a></li>
+                            <li><a class="liensouscat" href="#">Photothèque</a></li>
+                            <li><a class="liensouscat" href="#">Revue de presse sélective</a></li>
+                        </ul>
+
+                    </div>
+                    <div class="col">
+                    </div>
+                </div>
             </section>
         </div>
+    </div>
+    <div class="main">
         <div id="presentation">
             <div class="container">
                 <div class="title">
@@ -144,8 +162,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="main">
         <div class="container">
             <section>
                 <div class="container-fluid">
