--- a/index.html
+++ b/index.html
@@ -18,138 +18,117 @@
   </head>
 
   <body>
-    <div id="sidebar">
-        <div class="social-links">
-            <div><a href="#"><i class="fa-brands fa-facebook"></i></a></div>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-twitter"></i></a>
-        </div>
-    </div>
-    <div id="navbar">
-        <div class="container" id="menu">
-            <section id="nav-principal">
-                <div id="logo">
-                    <img src="./img/logo-laff.png" alt="logo-laff" style="max-width: 180px;">
+      <div class="container" id="menu">
+          <div id="navbar">
+              <div id="logo">
+                  <img src="./img/logo-laff.png" alt="logo-laff" style="max-width: 240px;">
                 </div>
-                <ul id="nav-elements">
-                    <li>
-                        <a class="liencat" id="cat1" href="#">Accueil</a>
-                    </li>
-                    <li>
-                        <a class="liencat" id="cat2" href="#">Programmation</a>
-                    </li>
-                    <li>
-                        <a class="liencat" id="cat3" href="#">Professionnels</a>
-                    </li>
-                    <li>
-                        <a class="liencat" id="cat4" href="#">À propos</a>
-                    </li>
-                    <li>
-                        <a class="liencat" id="cat5" href="#">Infos pratiques</a>
-                    </li>
-                    <li>
-                        <a class="liencat" id="cat6" href="#">Presse</a>
-                    </li>
-                </ul>
-                <ul id="shortcuts">
-                    <li id="account">Mon compte</li>
-                    <div id="closeBtn"><a href="">Fermer</a></div>
-                    <li>fr en</li>
-                    <!-- <li id="search"><i class="fa-solid fa-magnifying-glass"></i></li> -->
-                </ul>
-            </section>
+                <section id="nav-principal">
+                    <ul id="shortcuts">
+                        <li id="account">Mon compte</li>
+                        <!-- <div id="closeBtn"><a href="">Fermer</a></div> -->
+                        <li>fr en</li>
+                        <!-- <li id="search"><i class="fa-solid fa-magnifying-glass"></i></li> -->
+                    </ul>
+                    <ul id="nav-elements">
+                        <li><a class="liencat" id="cat1" href="#">Accueil</a></li>
+                        <li><a class="liencat" id="cat2" href="#">Programmation</a></li>
+                        <li><a class="liencat" id="cat3" href="#">Professionnels</a></li>
+                        <li><a class="liencat" id="cat4" href="#">À propos</a></li>
+                        <li><a class="liencat" id="cat5" href="#">Infos pratiques</a></li>
+                        <li><a class="liencat" id="cat6" href="#">Presse</a></li>
+                    </ul>
+                </section>
+            </div>
             <section id="nav-secondaire">
-                <div class="overlay">
-                </div>
                 <div class="not-overlay"></div>
-                <div class="row">
-                    <div class="col"></div>
-                    <div class="col-6">
-                        <ul id="souscat1">
-                            <li><a class="liensouscat" href="#">Les Arcs Film Festival</a></li>
-                            <li><a class="liensouscat" href="#">Blog</a></li>
-                            <li><a class="liensouscat" href="#">Newsletter</a></li>
-                            <li><a class="liensouscat" href="#">Cinéma Green Lab</a></li>
-                            <li><a class="liensouscat" href="#">Slope Of Fame</a></li>
-                            <li><a class="liensouscat" href="#">@lesarcsfilmfest</a></li>
-                        </ul>
-                        <ul id="souscat2">
-                            <li><a class="liensouscat" href="#">Appel à films 2022</a></li>
-                            <li><a class="liensouscat" href="#">Palmarès 2021</a></li>
-                            <li><a class="liensouscat" href="#">Invités d'honneur 2021</a></li>
-                            <li><a class="liensouscat" href="#">Catalogue 2021</a></li>
-                            <li><a class="liensouscat" href="#">Programmation</a></li>
-                            <li><a class="liensouscat" href="#">Le Lab Femmes de Cinéma</a></li>
-                            <li><a class="liensouscat" href="#">Les scolaires au festival</a></li>
-                            <li><a class="liensouscat" href="#">Comité de sélection</a></li>
-                            <li><a class="liensouscat" href="#">Statistiques</a></li>
-                            <li><a class="liensouscat" href="#">Archives</a></li>
-                        </ul>
-                        <ul id="souscat3">
-                            <li><a class="liensouscat" href="#">LOGIN</a></li>
-                            <li><a class="liensouscat" href="#">Covid-19</a></li>
-                            <li><a class="liensouscat" href="#">Industry Village</a>
-                                <ul class="sousliste">
-                                    <li><a href="#">Village des Coproductions</a></li>
-                                    <li><a href="#">Work in Progress</a></li>
-                                    <li><a href="#">Music Village</a></li>
-                                    <li><a href="#">Talent Village</a></li>
-                                    <li><a href="#">Les principaux Flocons des Arcs</a></li>
-                                    <li><a href="#">Industry Village Awards 2021</a></li>
-                                </ul>
-                            </li>
-                            <li><a class="liensouscat" href="#">Le Sommet Distributeurs/Exploitants</a>
-                                <ul class="sousliste">
-                                    <li><a href="#">Le programme du Sommet des Arcs 2021</a></li>
-                                    <li><a href="#">Hors Piste Cinéma</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <ul id="souscat4">
-                            <li><a class="liensouscat" href="#">Édito</a></li>
-                            <li><a class="liensouscat" href="#">L’Équipe du festival</a></li>
-                            <li><a class="liensouscat" href="#">Partenaires</a>
-                                <ul class="sousliste">
-                                    <li><a href="#">La Flèche de Cristal</a></li>
-                                </ul>
-                            </li>
-                            <li><a class="liensouscat" href="#">Mécènes</a></li>
-                            <li><a class="liensouscat" href="#">Le Club</a></li>
-                            <li><a class="liensouscat" href="#">Notre politique de confidentialité (RGPD)</a></li>
-                        </ul>
-                        <ul id="souscat5">
-                            <li><a class="liensouscat" href="#">Covid 19</a></li>
-                            <li><a class="liensouscat" href="#">Votre séjour aux Arcs</a>
-                                <ul class="sousliste">
-                                    <li><a href="#">Hébergement</a></li>
-                                    <li><a href="#">Le Ski</a></li>
-                                    <li><a href="#">Se restaurer</a></li>
-                                    <li><a href="#">Les Commerces</a></li>
-                                </ul>
-                            </li>
-                            <li><a class="liensouscat" href="#">Se rendre au festival</a></li>
-                            <li><a class="liensouscat" href="#">Les Lieux du festival</a></li>
-                            <li><a class="liensouscat" href="#">Le Guide de survie du festival</a></li>
-                            <li><a class="liensouscat" href="#">Venir avec vos enfants</a></li>
-                            <li><a class="liensouscat" href="#">Accessibilité pour tous</a></li>
-                        </ul>
-                        <ul id="souscat6">
-                            <li><a class="liensouscat" href="#">Communiqués et dossiers de presse</a></li>
-                            <li><a class="liensouscat" href="#">Accréditation Presse</a></li>
-                            <li><a class="liensouscat" href="#">Espace téléchargement</a></li>
-                            <li><a class="liensouscat" href="#">Photothèque</a></li>
-                            <li><a class="liensouscat" href="#">Revue de presse sélective</a></li>
-                        </ul>
-
-                    </div>
-                    <div class="col">
-                    </div>
-                </div>
+                <div class="overlay"></div>
+                    <ul class="souscat" id="souscat1">
+                        <li><a class="liensouscat" href="#">Les Arcs Film Festival</a></li>
+                        <li><a class="liensouscat" href="#">Blog</a></li>
+                        <li><a class="liensouscat" href="#">Newsletter</a></li>
+                        <li><a class="liensouscat" href="#">Cinéma Green Lab</a></li>
+                        <li><a class="liensouscat" href="#">Slope Of Fame</a></li>
+                        <li><a class="liensouscat" href="#">@lesarcsfilmfest</a></li>
+                    </ul>
+                    <ul class="souscat" id="souscat2">
+                        <li><a class="liensouscat" href="#">Appel à films 2022</a></li>
+                        <li><a class="liensouscat" href="#">Palmarès 2021</a></li>
+                        <li><a class="liensouscat" href="#">Invités d'honneur 2021</a></li>
+                        <li><a class="liensouscat" href="#">Catalogue 2021</a></li>
+                        <li><a class="liensouscat" href="#">Programmation</a></li>
+                        <li><a class="liensouscat" href="#">Le Lab Femmes de Cinéma</a></li>
+                        <li><a class="liensouscat" href="#">Les scolaires au festival</a></li>
+                        <li><a class="liensouscat" href="#">Comité de sélection</a></li>
+                        <li><a class="liensouscat" href="#">Statistiques</a></li>
+                        <li><a class="liensouscat" href="#">Archives</a></li>
+                    </ul>
+                    <ul class="souscat" id="souscat3">
+                        <li><a class="liensouscat" href="#">LOGIN</a></li>
+                        <li><a class="liensouscat" href="#">Covid-19</a></li>
+                        <li><a class="liensouscat" href="#">Industry Village</a>
+                            <ul class="sousliste">
+                                <li><a href="#">Village des Coproductions</a></li>
+                                <li><a href="#">Work in Progress</a></li>
+                                <li><a href="#">Music Village</a></li>
+                                <li><a href="#">Talent Village</a></li>
+                                <li><a href="#">Les principaux Flocons des Arcs</a></li>
+                                <li><a href="#">Industry Village Awards 2021</a></li>
+                            </ul>
+                        </li>
+                        <li><a class="liensouscat" href="#">Le Sommet Distributeurs/Exploitants</a>
+                            <ul class="sousliste">
+                                <li><a href="#">Le programme du Sommet des Arcs 2021</a></li>
+                                <li><a href="#">Hors Piste Cinéma</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="souscat" id="souscat4">
+                        <li><a class="liensouscat" href="#">Édito</a></li>
+                        <li><a class="liensouscat" href="#">L’Équipe du festival</a></li>
+                        <li><a class="liensouscat" href="#">Partenaires</a>
+                            <ul class="sousliste">
+                                <li><a href="#">La Flèche de Cristal</a></li>
+                            </ul>
+                        </li>
+                        <li><a class="liensouscat" href="#">Mécènes</a></li>
+                        <li><a class="liensouscat" href="#">Le Club</a></li>
+                        <li><a class="liensouscat" href="#">Notre politique de confidentialité (RGPD)</a></li>
+                    </ul>
+                    <ul class="souscat" id="souscat5">
+                        <li><a class="liensouscat" href="#">Covid 19</a></li>
+                        <li><a class="liensouscat" href="#">Votre séjour aux Arcs</a>
+                            <ul class="sousliste">
+                                <li><a href="#">Hébergement</a></li>
+                                <li><a href="#">Le Ski</a></li>
+                                <li><a href="#">Se restaurer</a></li>
+                                <li><a href="#">Les Commerces</a></li>
+                            </ul>
+                        </li>
+                        <li><a class="liensouscat" href="#">Se rendre au festival</a></li>
+                        <li><a class="liensouscat" href="#">Les Lieux du festival</a></li>
+                        <li><a class="liensouscat" href="#">Le Guide de survie du festival</a></li>
+                        <li><a class="liensouscat" href="#">Venir avec vos enfants</a></li>
+                        <li><a class="liensouscat" href="#">Accessibilité pour tous</a></li>
+                    </ul>
+                    <ul class="souscat" id="souscat6">
+                        <li><a class="liensouscat" href="#">Communiqués et dossiers de presse</a></li>
+                        <li><a class="liensouscat" href="#">Accréditation Presse</a></li>
+                        <li><a class="liensouscat" href="#">Espace téléchargement</a></li>
+                        <li><a class="liensouscat" href="#">Photothèque</a></li>
+                        <li><a class="liensouscat" href="#">Revue de presse sélective</a></li>
+                    </ul>
             </section>
-        </div>
     </div>
     <div class="main">
         <div id="presentation">
+            <!-- <div id="sidebar">
+                <div class="social-links">
+                    <div><a href="#"><i class="fa-brands fa-facebook"></i></a></div>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div> -->
             <div class="container">
                 <div class="title">
                     <div class="title-edition">
